--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "7.9.0",
+    "@typescript-eslint/parser": "7.9.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.2.3",
     "typescript": "5.4.5"
