--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "next dev",
     "build": "next build && node scripts/generate-sw.js",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier:check": "prettier --check ."
   },
   "dependencies": {
     "next": "14.2.3",
@@ -26,6 +27,7 @@
     "@typescript-eslint/parser": "7.9.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.2.3",
+    "prettier": "3.2.5",
     "typescript": "5.4.5"
   }
 }
