Update project to monorepo

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ditto",
+  "name": "stack-x",
   "version": "0.1.0",
   "private": true,
   "packageManager": "yarn@4.2.2",
@@ -8,26 +8,18 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build && node scripts/generate-sw.js",
-    "start": "next start",
-    "lint": "next lint",
+    "dev": "turbo dev",
+    "build": "turbo build",
+    "start": "turbo start",
+    "lint": "turbo lint",
     "prettier:check": "prettier --check ."
   },
-  "dependencies": {
-    "next": "14.2.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
-  },
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "devDependencies": {
-    "@types/node": "20.12.12",
-    "@types/react": "18.3.2",
-    "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "7.9.0",
-    "@typescript-eslint/parser": "7.9.0",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.2.3",
     "prettier": "3.2.5",
-    "typescript": "5.4.5"
+    "turbo": "1.13.3"
   }
 }
