--- a/apps/ditto/package.json
+++ b/apps/ditto/package.json
@@ -17,8 +17,8 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@stack-x/eslint-config": "*",
-    "@stack-x/tsconfig": "*",
+    "@stack-x/eslint-config": "workspace:*",
+    "@stack-x/tsconfig": "workspace:*",
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
