--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,5 @@
 # Dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/install-state.gz
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+node_modules/
 
 # Testing
 coverage/
@@ -24,8 +15,6 @@ dist/
 
 # Debug
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # Local env files
 .env*.local
