--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stack-x",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "yarn@4.2.2",
+  "packageManager": "pnpm@9.1.2",
   "engines": {
     "node": "20.13"
   },
@@ -14,10 +14,6 @@
     "lint": "turbo lint",
     "prettier:check": "prettier --check ."
   },
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
   "devDependencies": {
     "prettier": "3.2.5",
     "turbo": "1.13.3"
