--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -8,6 +8,7 @@
     "@typescript-eslint/parser": "7.9.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-jsx-a11y": "6.8.0",
     "typescript": "5.4.5"
   }
 }
