--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/workflows/base-setup.yml
+      - uses: johnal95/nextjs-pwa/.github/workflows/base-setup.yml
       - name: Lint
         run: pnpm lint
 
