--- a/.github/actions/node-pnpm-setup/action.yml
+++ b/.github/actions/node-pnpm-setup/action.yml
@@ -1,5 +1,5 @@
-name: Base Setup Action
-description: Base setup action
+name: Node pnpm Setup Action
+description: Composite action to setup Node.js and pnpm versions according to NODE_VERSION and PNPM_VERSION environment variables.
 
 runs:
   using: "composite"
