Update base setup action description

--- a/.github/actions/base-setup/action.yml
+++ b/.github/actions/base-setup/action.yml
@@ -1,7 +1,7 @@
 name: Base Setup Action
 description: |
   Composite action to setup Node.js and pnpm versions according to 'NODE_VERSION'
-  and 'PNPM_VERSION' environment variables, and installing dependencies.
+  and 'PNPM_VERSION' environment variables. As well as installing dependencies.
 
 runs:
   using: "composite"
