Rename base setup action to node pnpm install

--- a/.github/actions/node-pnpm-install/action.yml
+++ b/.github/actions/node-pnpm-install/action.yml
@@ -1,4 +1,4 @@
-name: Base Setup Action
+name: Node.js pnpm install action
 description: |
   Composite action to setup Node.js and pnpm versions according to 'NODE_VERSION'
   and 'PNPM_VERSION' environment variables. As well as installing dependencies.
