--- a/apps/ditto/package.json
+++ b/apps/ditto/package.json
@@ -2,6 +2,10 @@
   "name": "@stack-x/ditto",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@9.1.2",
+  "engines": {
+    "node": "20.13"
+  },
   "type": "module",
   "scripts": {
     "dev": "next dev",
