--- a/.github/actions/node-pnpm-install/action.yml
+++ b/.github/actions/node-pnpm-install/action.yml
@@ -17,4 +17,4 @@ runs:
         cache: "pnpm"
     - name: Install dependencies
       shell: bash
-      run: pnpm install --frozen-lockfile
+      run: pnpm install --frozen-lockfile --ignore-scripts
