--- a/apps/ditto/package.json
+++ b/apps/ditto/package.json
@@ -18,7 +18,8 @@
     "@stack-x/ui": "workspace:*",
     "next": "14.2.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "sharp": "0.33.4"
   },
   "devDependencies": {
     "@stack-x/eslint-config": "workspace:*",
