--- a/apps/ditto/package.json
+++ b/apps/ditto/package.json
@@ -16,9 +16,9 @@
   },
   "dependencies": {
     "@stack-x/ui": "workspace:*",
-    "next": "14.2.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next": "15.0.0-rc.0",
+    "react": "19.0.0-rc-f994737d14-20240522",
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
     "sharp": "0.33.4"
   },
   "devDependencies": {
@@ -29,6 +29,7 @@
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "7.10.0",
     "@typescript-eslint/parser": "7.10.0",
+    "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
     "eslint": "8.56.0",
     "eslint-config-next": "14.2.3",
     "typescript": "5.4.5"
