--- a/apps/ditto/package.json
+++ b/apps/ditto/package.json
@@ -16,10 +16,12 @@
     "prettier:check": "prettier --check ."
   },
   "dependencies": {
+    "@reduxjs/toolkit": "2.2.5",
     "@stack-x/ui": "workspace:*",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-redux": "9.1.2",
     "sharp": "0.33.4"
   },
   "devDependencies": {
