--- a/apps/ditto/package.json
+++ b/apps/ditto/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "2.2.5",
     "@stack-x/ui": "workspace:*",
     "next": "14.2.3",
+    "next-intl": "3.14.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-redux": "9.1.2",
