--- a/apps/ditto/package.json
+++ b/apps/ditto/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "2.2.5",
     "@stack-x/ui": "workspace:*",
+    "jotai": "2.8.3",
     "next": "14.2.3",
     "next-intl": "3.14.1",
     "react": "18.3.1",
