--- a/apps/ditto/package.json
+++ b/apps/ditto/package.json
@@ -37,6 +37,7 @@
     "eslint": "8.56.0",
     "eslint-config-next": "14.2.3",
     "tsx": "4.11.2",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "workbox-build": "7.1.1"
   }
 }
